[gd_scene load_steps=4 format=3 uid="uid://3skltl0wxaxt"]

[ext_resource type="Script" path="res://Scenes/meteor.gd" id="1_dc3fr"]
[ext_resource type="AudioStream" uid="uid://cgpul642vb7nx" path="res://global/retro-explode-2-236688.mp3" id="2_rt84g"]

[sub_resource type="CircleShape2D" id="CircleShape2D_sqhkl"]
radius = 43.0116

[node name="Meteor" type="Area2D"]
collision_layer = 2
collision_mask = 9
script = ExtResource("1_dc3fr")

[node name="MeteorImage" type="Sprite2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_sqhkl")

[node name="ExplodeSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_rt84g")
volume_db = -15.0

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
